# LeanAgent

./: .dockerignore  .gitignore  .upload_progress.json  0FULL.txt  0full.txt  0full2.txt  1.txt  10.txt  101.txt  102.txt  107.txt  108.txt  10WIP.txt  10full.txt  10wip.txt  11.txt  111.txt  118.txt  11full2.txt  11wip.txt  12.txt  134.txt  14.txt  141.txt  141.txt]  142.txt  143.txt  146.txt  14_original_theorem_info.json  14_repos.json  150.txt  156.txt  157.txt  164.txt  172.txt  173.txt  182.txt  19.txt  190.txt  192.txt  (+741 more)
docs/: implementation_plan.md  pr1_description.md  pr2_plan.md  refactoring_plan.md
generator/: datamodule.py  model.py  model_big_model.py  model_demo.py
kaiyuy_leandojo-lean4-retriever-tacgen-byt5-small/: config.json  load_model.py  model.bin.REMOVED.git-id  model.ckpt.REMOVED.git-id  model.safetensors.REMOVED.git-id  model_lightning.bak.REMOVED.git-id  model_lightning.ckpt.REMOVED.git-id  model_lightning_retriever.ckpt.REMOVED.git-id  model_test.ckpt.REMOVED.git-id  tokenizer_config.json
leanagent/: __init__.py  cli.py  config.py
prover/: download_model.py  download_model_generator.py  download_model_retriever.py  evaluate.py  fix_model_ckpt.py  proof_search.py  proof_search_3full_full.py  proof_search_abl2.py  proof_search_abl3.py  proof_search_abl4.py  proof_search_all_sorries.py  proof_search_big_model.py  proof_search_demo.py  proof_search_full.py  proof_search_full2.py  proof_search_new.py  proof_search_pfr.py  proof_search_scilean.py  prover_search_no_retrieval.py
retrieval/: corpus_cut.py  cut_data.py  datamodule.py  evaluate.py  (+7 more)
(+96 files in other folders)
